force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/Apttus_DocuApi__DocusignAuthentication__mdt.object-meta.xml
<CustomObject>
    <label>Docusign Authentication</label>
    <pluralLabel>DocusignAuthencations</pluralLabel>
</CustomObject>