force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__DocusignAccountBaseURI__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignAccountBaseURI__c</fullName>
    <inlineHelpText>To get the Account Base URI, you can log into DocuSign as an admin and go to Settings &gt; Apps and keys &gt; Account Base URI</inlineHelpText>
    <label>Docusign Account Base URI</label>
    <type>Url</type>
</CustomField>