force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__DocusignAccountID__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignAccountID__c</fullName>
    <description>Docusign account number</description>
    <inlineHelpText>To get the Account Id, Click your profile image on the upper-right corner of the console; your account number is beneath your name and/or organization name in the drop-down menu</inlineHelpText>
    <label>Docusign Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>