force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__DocusignAdminUserAPIID__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignAdminUserAPIID__c</fullName>
    <description>This field for DocuSign admin user API ID.</description>
    <inlineHelpText>To get the User Id, you can log into DocuSign as an admin and go to Settings &gt; Apps and keys &gt; User Id.</inlineHelpText>
    <label>Docusign Admin User API ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>