force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__DocusignAPIAccountID__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignAPIAccountID__c</fullName>
    <description>This field for DocuSign API Account ID.</description>
    <inlineHelpText>To get the API Account Id, you can log into DocuSign as an admin and go to Settings &gt; Apps and keys &gt; API Account Id.</inlineHelpText>
    <label>Docusign API Account ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>