force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__EnableAdminConsent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EnableAdminConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provide a one-time DocuSign consent on behalf of all the users.</description>
    <inlineHelpText>Provide a one-time DocuSign consent on behalf of all the users.</inlineHelpText>
    <label>Enable Admin Consent</label>
    <type>Checkbox</type>
</CustomField>