force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__Environment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Environment__c</fullName>
    <description>This field for DocuSign Environment setting.</description>
    <inlineHelpText>Select a DocuSign Environment.</inlineHelpText>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
                <default>true</default>
                <label>Demo</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>