force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__IntegrationKey__c</fullName>
    <description>This field for DocuSign Integration Key.</description>
    <inlineHelpText>To generate the Integration Id, you can log into DocuSign as an admin and go to Settings &gt; Apps and keys &gt; Add app and integration key.</inlineHelpText>
    <label>Integration Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>