force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__PrivateKey__c</fullName>
    <description>This field for DocuSign Private Key.</description>
    <inlineHelpText>To generate the Private Key, you can log into DocuSign as an admin and go to Settings &gt; Apps and keys &gt; Add app and integration key &gt; Generate RSA key.</inlineHelpText>
    <label>Private Key</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>