force-app/main/default/objects/Apttus_DocuApi__DocusignAuthentication__mdt/fields/Apttus_DocuApi__PublicKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__PublicKey__c</fullName>
    <description>This field for DocuSign Public Key.</description>
    <inlineHelpText>To generate the Public Key, you can log into DocuSign as an admin and go to Settings &gt; Apps and keys &gt; Add app and integration key &gt; Generate RSA key.</inlineHelpText>
    <label>Public Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>